k8s/grafana/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana 
  namespace: grafana 
spec:
  entryPoints: [https]
  routes:
  - kind: Rule
    match: Host(`grafana.pycrs.cz`) 
    services:
    - kind: Service
      name: grafana
      port: http 
  tls: {}
